<resources>
    <string name="app_name">UP</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="facebook_app_id">220681391675615</string>

    <string name="action_settings">Settings</string>
    <string name="acesse_sua_conta">Acesse sua conta!</string>
    <string name="clique_aqui">Clique aqui!</string>
    <string name="anuncio">Anúncios</string>
    <string name="inserir_anuncio">Inserir Anúncio</string>
    <string name="minha_conta">Minha Conta</string>
    <string name="fale_conosco">Fale Conosco</string>
    <string name="dicas">Dicas</string>
    <string name="termo_uso">Termo de Uso</string>
    <string name="avalie_google_play">Avalie na Google Play</string>
    <string name="regiao">Região</string>
    <string name="categoria">Categoria</string>
    <string name="filtros">Filtros</string>
    <string name="conectar_com_facebook">Conectar com Facebook</string>
    <string name="ou">ou</string>
    <string name="email">Email</string>
    <string name="senha">Senha</string>
    <string name="esqueceu">Esqueceu?</string>
    <string name="entrar">Entrar</string>
    <string name="nome">Nome</string>
    <string name="cpf">CPF</string>
    <string name="telefone">Telefone</string>
    <string name="concordo">Concordo</string>
    <string name="enviar">Enviar</string>
    <string name="cadastro">Cadastro</string>
    <string name="campo_obrigatorio">Campo Obrigatório</string>
    <string name="cpf_invalido">CPF não é válido!</string>
    <string name="aguarde">Por favor Aguarde ...</string>
    <string name="vazio">VAZIO</string>
    <string name="erro_ao_cadastrar">Erro ao cadastrar</string>
    <string name="cadastrado_com_sucesso">Cadastrado com Sucesso!</string>
    <string name="error_conexao_indisponivel">Conexão indisponível. Verifique seu Wi-FI ou 3G.</string>

    <string name="preference_file_key">br.com.psousa.preference_up_key</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="sair">Sair</string>
    <string name="descricao">Descrição</string>
    <string name="selecione_uma_categoria">Selecione uma Categoria</string>
    <string name="meus_anuncios">Meus Anuncios</string>
    <string name="editar">Editar</string>
    <string name="apagar">Apagar</string>
    <string name="title_activity_servico">ServicoActivity</string>

</resources>
