<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/header"
    tools:context="br.com.psousa.up.PerfilFragment">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:orientation="vertical">


                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/nome"
                    android:id="@+id/txt_perfil_nome"
                    android:textStyle="bold"
                    android:textSize="15sp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"
                        android:hint="@string/cpf"
                        android:id="@+id/edt_perfil_cpf"
                        android:maxLines="1"
                        android:imeOptions="actionNext" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"
                        android:hint="@string/email"
                        android:id="@+id/edt_perfil_email"
                        android:maxLines="1"
                        android:imeOptions="actionNext" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="phone"
                        android:hint="@string/telefone"
                        android:id="@+id/edt_perfil_telefone"
                        android:maxLines="1"
                        android:imeOptions="actionNext" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp">
                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint="@string/senha"
                        android:id="@+id/edt_perfil_senha"
                        android:maxLines="1"
                        android:imeOptions="actionNext" />
                </android.support.design.widget.TextInputLayout>

                <com.facebook.login.widget.LoginButton
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/btn_perfil_facebook"
                    android:visibility="visible"/>
                <Button
                    android:layout_width="match_parent"
                    android:layout_height="30dp"
                    android:text="@string/sair"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:visibility="invisible"
                    android:id="@+id/btn_perfil_sair"
                    android:textAllCaps="false"
                    android:background="@drawable/screen_border_green"
                    />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="25dp"/>

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/enviar"
                    android:textColor="#FFFFFF"
                    android:textStyle="bold"
                    android:textAllCaps="false"
                    android:id="@+id/btn_perfil_enviar"
                    android:background="@drawable/screen_border_green"
                    />
            </LinearLayout>
        </ScrollView>
</FrameLayout>
