<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_entrar"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="br.com.psousa.up.EntrarActivity"
    android:orientation="vertical"
    android:weightSum="1">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <com.facebook.login.widget.LoginButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/btn_entrar_facebook"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ou"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email"
                    android:id="@+id/edt_entrar_email"
                    android:imeOptions="actionNext"
                    android:inputType="textEmailAddress"
                    android:maxLines="1" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">
                <EditText
                   android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                    android:inputType="textPassword"
                   android:hint="@string/senha"
                    android:id="@+id/edt_entrar_senha"
                    android:maxLines="1"
                    android:imeOptions="actionSend" />
            </android.support.design.widget.TextInputLayout>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="left"
                android:textColor="@color/colorPrimary"
                android:text="@string/esqueceu"/>
            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/entrar"
                android:id="@+id/btn_entrar_entrar"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:background="@drawable/screen_border_green"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="@string/ou"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Criar conta com e-mail"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:background="@drawable/screen_border_borda"
                android:textColor="@color/colorPrimary"
                android:id="@+id/btn_entrar_criar_conta"
                />

            <View
                android:layout_width="match_parent"
                android:layout_height="20dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="Ao conectar você concorda com os"/>
            <View
                android:layout_width="match_parent"
                android:layout_height="5dp" />
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textColor="@color/colorPrimary"
                android:text="Termos de Uso"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
