<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingTop="@dimen/header"
    tools:context="br.com.psousa.up.CadastroServicoFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="150dp"
                android:layout_gravity="center"
                android:id="@+id/img_cadastro_servico_imagem"
                android:src="@mipmap/ic_camera"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_cadastro_servico_descricao"
                    android:inputType="text"
                    android:hint="@string/descricao"
                    android:maxLines="1"
                    android:imeOptions="actionNext"/>
            </android.support.design.widget.TextInputLayout>

            <Spinner
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/spn_cadastro_servico_categoria"
                android:inputType="text"
                android:hint="@string/selecione_uma_categoria"
                android:imeOptions="actionNext"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/edt_cadastro_servico_contato"
                    android:inputType="text"
                    android:hint="Telefone / Email / Endereco"
                    android:maxLines="1"
                    android:imeOptions="actionDone"/>
            </android.support.design.widget.TextInputLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="25dp"/>

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/enviar"
                android:textColor="#FFFFFF"
                android:textStyle="bold"
                android:textAllCaps="false"
                android:id="@+id/btn_cadastro_servico_enviar"
                android:background="@drawable/screen_border_green"
                />




        </LinearLayout>
    </ScrollView>

</FrameLayout>
